# Masterthesis-Self-Supervised-Laplace-Approximation

./: README.md  pyproject.toml
experiments/conjugate_prior/bayesian_linear_regression/: bayesian_linear_regression.py
experiments/conjugate_prior/bayesian_linear_regression/Default/: README.md
experiments/conjugate_prior/bayesian_linear_regression/DefaultSeed43/: README.md
experiments/conjugate_prior/bayesian_linear_regression/DefaultSeed44/: README.md
experiments/conjugate_prior/normal_normal/: normal_normal.py
experiments/conjugate_prior/poi_gamma/: poisson_model.py
experiments/heteroscedastic_regression/: HMC.py  heteroscedastic_regression.py  hp_tuning.py  utils.py
experiments/heteroscedastic_regression/hps/: bnn_mfvi.json  bnn_vi.json  hmc.json  mlp_1.json
experiments/heteroscedastic_regression/latex/: heteroscedastic_coverage.tex
experiments/uciml/: hp_tuning.py  uci_experiment.py  utils.py
experiments/uciml/hps/: airfoil.json  auto_mpg.json  bikesharing.json  concrete.json  daily_demand.json  liver.json  realestate.json  wine.json
experiments/uciml/latex/: uciml_results.tex
experiments/uciml/latex copy/: uciml_results.tex
scripts/: run_experiments.ps1  run_experiments.sh  run_hp_tuning.ps1  run_hp_tuning.sh
src/: latex_utils.py  utils.py
src/datamodules/: UCIMLRepoDataModule.py  __init__.py  utils.py
src/services/: BNNMFVIService.py  BNNVIService.py  MLPService.py  __init__.py
src/ssl/: ApproximationStrategy.py  SamplingStrategy.py  SelfSupervisedLaplace.py  __init__.py  _types.py
(+253 files in other folders)
