[tool.poetry]
name = "masterthesis-self-supervised laplace approximation"
version = "0.1.0"
description = ""
authors = ["Alexander Marquard"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"
lightning-uq-box = "0.2.0"
nngeometry = "^0.3"
ipykernel = "^6.29.5"
laplace-torch = "^0.2.1"
pymc = "^5.18.2"
seaborn = "^0.13.2"
hamiltorch = {git = "https://github.com/AdamCobb/hamiltorch"}
ucimlrepo = "^0.0.7"
click = "^8.1.8"
optuna = "^4.2.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pyinstrument = "^5.0.0"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
